--- a/info.yaml
+++ b/info.yaml
@@ -1,7 +1,7 @@
 # Tiny Tapeout project information
 project:
   title:        "Counter"      # Project title
-  author:       ""      # Your name
+  author:       "Isak Hadi och Izabella Hagberg"      # Your name
   discord:      ""      # Your discord username, for communication and automatically assigning you a Tapeout role (optional)
   description:  ""      # One line description of what your project does
   language:     "VHDL"  # other examples include Verilog, SystemVerilog, Amaranth, etc
@@ -11,7 +11,7 @@ project:
   tiles: "1x1"          # Valid values: 1x1, 1x2, 2x2, 3x2, 4x2, 6x2 or 8x2
 
   # Your top module name must start with "tt_um_". Make it unique by including your github username:
-  top_module:  "tt_um_example"
+  top_module:  "tt_um_counter_isaharp"
 
   # List your project's source files here.
   # Source files must be in ./src and you must list each source file separately, one per line.
@@ -20,13 +20,13 @@ project:
   # WARNING: VHDL support in Tiny Tapeout is experimental. The template may get changes during
   #          the shuttle and VHDL support may be dropped for future shuttles if we see low usage.
   source_files:
-    - "project.vhdl"
+    - "tt_um_counter_isaharp.vhdl"
 
 # The pinout of your project. Leave unused pins blank. DO NOT delete or add any pins.
 # This section is for the datasheet/website. Use descriptive names (e.g., RX, TX, MOSI, SCL, SEG_A, etc.).
 pinout:
   # Inputs
-  ui[0]: ""
+  ui[0]: "direction [count up || down]" 
   ui[1]: ""
   ui[2]: ""
   ui[3]: ""
@@ -36,14 +36,14 @@ pinout:
   ui[7]: ""
 
   # Outputs
-  uo[0]: ""
-  uo[1]: ""
-  uo[2]: ""
-  uo[3]: ""
-  uo[4]: ""
-  uo[5]: ""
-  uo[6]: ""
-  uo[7]: ""
+  uo[0]: "7seg a"
+  uo[1]: "7seg b"
+  uo[2]: "7seg c"
+  uo[3]: "7seg d"
+  uo[4]: "7seg e" 
+  uo[5]: "7seg f"
+  uo[6]: "7seg g"
+  uo[7]: "7seg h (dot)"
 
   # Bidirectional pins
   uio[0]: ""
